# javm

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: implementer.md  planner.md  reviewer.md  tester.md
.claude/rules/: architecture.md  git.md  global.md
.claude/skills/version-release/: SKILL.md
.github/workflows/: release-windows.yml  release.yml
.superpowers/sdd/: final-review.diff  progress.md  task3-review.diff  task6-review.diff
docs/plans/: README.md  metatube-sidecar-集成计划.md  nfo-独立存储与标准化-计划.md  反爬工具箱-方案.md  多维度浏览-统一框架方案.md  字段级跨源融合-方案.md  封面截图获取-独立功能方案.md  库健康诊断-方案.md  探索模块-全网发现方案.md  有码无码分轨-方案.md  标准库与非标准库-方案.md  演员新作订阅-方案.md  演员模块-功能方案.md  番号识别增强-方案.md  观看进度与继续观看-方案.md  视频获取-快路径与并发优化方案.md  跨语言别名与实体规范化-方案.md
docs/releases/: TEMPLATE.md  v0.1.10-beta.1.md  v0.1.10-beta.2.md  v0.1.10-beta.3.md  v0.1.10-beta.4.md  v0.1.10-beta.6.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.9.md  v0.2.0.md  v0.2.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.8.md  v0.3.9.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.2.md  v0.5.4-beta.2.md  v0.5.4-beta.3.md
docs/superpowers/specs/: 2026-06-23-并行查找细化-design.md
src/: App.vue  main.ts  router.ts
src-tauri/: CODE_REVIEW.md  Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json  scraper.json  video-finder.json
src-tauri/examples/: parser_check.rs
src-tauri/src/: analytics.rs  db.rs  lib.rs  logging.rs  metadata.rs  settings.rs
src-tauri/src/actor/: commands.rs  mod.rs
src-tauri/src/db/: actors.rs  directory.rs  facets.rs  metadata.rs  mod.rs  models.rs  schema.rs  scrape_tasks.rs  videos.rs
src-tauri/src/download/: commands.rs  image.rs  manager.rs
src-tauri/src/entity_alias/: mod.rs  overrides.rs
src-tauri/src/media/: artwork.rs  assets.rs  commands.rs  dmm.rs  ffmpeg.rs  mod.rs  storage.rs
src-tauri/src/metatube/: binary.rs  commands.rs  installer.rs  mod.rs  supervisor.rs
src-tauri/src/nfo/: generator.rs  parser.rs
src-tauri/src/resource_scrape/: actor_provider.rs  cf_detection.rs  client.rs  commands.rs  database_writer.rs  fetcher.rs  fingerprint_client.rs  fusion.rs  javbus_genres.rs  magnet.rs  mod.rs  queue_manager.rs  types.rs  video_finder.rs  webclaw_client.rs  webview_support.rs
src-tauri/src/resource_scrape/anti_block/: config.rs  emulation.rs  engine.rs  mirror.rs  mod.rs  proxy_pool.rs  rate_limiter.rs
src-tauri/src/resource_scrape/sources/: av123.rs  common.rs  freejavbt.rs  javbus.rs  javguru.rs  javlibrary.rs  javmenu.rs  javplace.rs  javsb.rs  javtiful.rs  javxx.rs  mod.rs  myjav.rs  projectjav.rs  threexplanet.rs
src-tauri/src/scanner/: commands.rs  file_scanner.rs  mod.rs  service.rs
src-tauri/src/settings/: commands.rs  encryption.rs  mod.rs
src-tauri/src/utils/: ai_translator.rs  designation_recognizer.rs  ffmpeg.rs  media_assets.rs  mod.rs  proxy.rs  system_commands.rs  update.rs
src-tauri/src/video/: commands.rs  service.rs
src/components/: ActorDetailPanel.vue  DirectoryManageDialog.vue  FacetDetailPanel.vue  FacetTagsField.vue  ImageFetchDialog.vue  LibraryHealthDialog.vue  MagnetList.vue  RemoveAdsDialog.vue  ResourceDetailDialog.vue  ScrapeDialog.vue  VideoCard.vue  VideoDetailDialog.vue  VideoLinkFinder.vue  VideoListItem.vue  VirtualGrid.vue
src/components/layout/: AppLayout.vue  AppSidebar.vue
src/composables/: useParallelFinder.ts  usePreviewGallery.ts
src/composables/__tests__/: useParallelFinder.spec.ts
src/lib/: logging.ts  tauri.ts
src/stores/: download.ts  index.ts  resourceScrape.ts  updater.ts  video.ts
src/types/: download.ts  index.ts  resourceSearch.ts  settings.ts  updater.ts  video.ts
src/utils/: constants.ts  dmm.ts  facet.ts  image.ts
src/views/: DirectoryView.vue  DiscoverView.vue  DownloadView.vue  MediaLibraryView.vue  ResourceScrapeView.vue  SettingsView.vue
(+2 files in other folders)
