[package]
name = "javm"
version = "0.5.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "javm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 开发构建：仅保留行号级调试信息（保证 panic 回溯可用），
# 移除完整变量/类型符号，避免 Windows 下 PDB 与增量缓存体积膨胀。
[profile.dev]
debug = "line-tables-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1.12.2"
scraper = "0.27"
url = "2.5.8"
nom-exif = "3.6"
base64 = "0.22"
quick-xml = "0.40"
tokio = { version = "1", features = ["full"] }
image = "0.25.9"
tauri-plugin-fs = "2.4.5"
tauri-plugin-localhost = "2.3.2"
rand = "0.10"
tokio-util = "0.7"
thiserror = "2"
sysinfo = "0.39"
wreq = { version = "5", features = ["json", "cookies", "gzip", "brotli", "deflate", "zstd"] }
wreq-util = "2"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[dev-dependencies]
tempfile = "3"
proptest = "1"
